examples/test/testpolicy16145.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16145
  namespace: namespace319
spec:
  podSelector:
    matchLabels:
      key40: value19
      key5: value36
      key13: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key17: value17
          key33: value20
          key1: value49
